--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://github.com/PatricioCapparelli/ReactJs-Preentrega1/build",
+  "homepage": "https://patriciocapparelli.github.io/ReactJs-Preentrega1/build",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,7 +13,10 @@
   "dependencies": {
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-magic-motion": "^1.1.2",
+    "react-router-dom": "^6.26.1",
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
