--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.13.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
     "react-magic-motion": "^1.1.2",
     "react-router-dom": "^6.26.1",
