--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-magic-motion": "^1.1.2",
     "react-router-dom": "^6.26.1",
+    "sweetalert2": "^11.14.1",
     "swiper": "^11.1.12"
   },
   "devDependencies": {
